Create macros for status icon

--- a/public/views/queue.push.html
+++ b/public/views/queue.push.html
@@ -6,7 +6,7 @@
         <a href="{{ repoStatusUrl }}">{{ repoName }}</a>
     </td>
     <td>
-        <span class="status-before--{{ pushStatusStyle }}" data-push="{{ pushId }}">{{  pushStatus }}</span>
+        <span class="status-icon--{{ pushStatusStyle }}" data-push="{{ pushId }}">{{  pushStatus }}</span>
     </td>
     <td>{{ environmentName }} → {{ serverName }}</td>
     <td>
