--- a/sass/style.scss
+++ b/sass/style.scss
@@ -54,7 +54,7 @@
 @import "patterns/pagination";
 @import "patterns/scroll-thing";
 @import "patterns/split";
-@import "patterns/status-block";
+@import "patterns/status";
 
 // must go last!
 @import "app/js";
