--- a/templates/admin/server.status.twig
+++ b/templates/admin/server.status.twig
@@ -13,18 +13,18 @@
                 <h3>{{ env }}</h3>
                 <ul class="col-list">
                     {% for server in servers %}
+                        <li>
+                            {% if server.type == 'rsync' %}
+                                <span class="status-icon--unknown" title="Updating..." data-server-status="{{ server.id }}">
+                                    <a href="{{ urlFor('server', {'id': server.id}) }}">{{ server|formatServer }}</a>
+                                </span>
+                            {% else %}
 
-                        {% if server.type == 'rsync' %}
-                            <li class="status-before--unknown" title="Updating..." data-server-status="{{ server.id }}">
-                                <a href="{{ urlFor('server', {'id': server.id}) }}">{{ server|formatServer }}</a>
-                            </li>
-                        {% else %}
-
-                            <li class="status-before--warning" title="Server status unavailable for AWS deployments">
-                                <a href="{{ urlFor('server', {'id': server.id}) }}">{{ server|formatServer }}</a>
-                            </li>
-                        {% endif %}
-
+                                <span class="status-icon--warning" title="Server status unavailable for AWS deployments">
+                                    <a href="{{ urlFor('server', {'id': server.id}) }}">{{ server|formatServer }}</a>
+                                </span>
+                            {% endif %}
+                        </li>
                     {% endfor %}
                 </ul>
             {% endif %}
