--- a/sass/patterns/_buttons.scss
+++ b/sass/patterns/_buttons.scss
@@ -1,10 +1,53 @@
-.btn {
-    border: 1px solid shade($blue,20%);
-    box-shadow: 0 -1px 0 rgba(255, 255, 255, .1) inset, 0 4px 0 shade($blue,20%), 0 4px 2px rgba(0, 0, 0, .5);
 
-    // Ensure that svg icons within buttons are clickable
+$btn-color-transparent: rgba(255, 255, 255, .1);
+
+@mixin btn-color($color, $hover: true) {
+    background-color: $color;
+    border-color: shade($color, 20%);
+
+    box-shadow:
+        0 -1px 0 0 $btn-color-transparent inset,
+        0 4px  0 0 shade($color, 20%);
+
+    @if $hover {
+        &:hover {
+            color: tint($color, 80%);
+            background-color: tint($color, 20%);
+            box-shadow:
+                0 -1px 0 0 $btn-color-transparent inset,
+                0 2px  0 0 shade($color, 20%);
+        }
+
+        &:focus {
+            color: shade($color, 20%);
+        }
+    }
+    @else {
+        &:hover {
+            color: $btn-text-color;
+            background-color: $color;
+            box-shadow:
+                0 -1px 0 0 $btn-color-transparent inset,
+                0 4px  0 0 shade($color, 20%);
+            margin: 0;
+        }
+
+        &:focus {
+            color: $btn-text-color;
+        }
+    }
+}
+
+.btn {
+    @include btn-color($blue);
+
     svg {
         pointer-events: none;
+    }
+
+    &:hover {
+        margin-top:3px;
+        margin-bottom: -3px;
     }
 }
 
@@ -13,20 +56,15 @@
     margin: 0;
     margin-top: -5px;
     padding: 0 ms(-8);
+
+    &:hover {
+        margin-top:-3px;
+        margin-bottom: -1px;
+    }
 }
 
 .btn--small { font-size: ms(-2); }
 .btn--large { font-size: ms(3); }
-
-@mixin btn-color($color) {
-    background-color: $color;
-    border: 1px solid shade($color, 20%);
-
-    box-shadow: 0 -1px 0 rgba(255, 255, 255, .1) inset, 0 4px 0 shade($color,20%), 0 4px 2px rgba(0, 0, 0, .5);
-
-    &:hover { background-color: tint($color, 15%); }
-    &:focus { color: shade($color, 20%); }
-}
 
 // Button types
 .btn--action {
@@ -38,7 +76,7 @@
 }
 
 .btn--disabled {
-    @include btn-color($light-grey);
+    @include btn-color($light-grey, false);
 }
 
 .btn--selected {
