--- a/templates/partials/pending-table.twig
+++ b/templates/partials/pending-table.twig
@@ -19,15 +19,7 @@
                         <td><a href="{{ urlFor('build', {build: job.id}) }}">Build</a></td>
                         <td><a href="{{ urlFor('repository.status', {id: job.repository.id}) }}">{{ job.repository.name }}</a></td>
                         <td>
-                            {% if job.status == 'Success' %}
-                                <span class="status-before--success">{{ job.status }}</span>
-                            {% elseif job.status in ['Error', 'Removed'] %}
-                                <span class="status-before--error">{{ job.status }}</span>
-                            {% elseif job.status in ['Waiting', 'Building', 'Pushing'] %}
-                                <span class="status-before--thinking" data-build="{{ job.id }}">{{ job.status }}</span>
-                            {% else %}
-                                <span class="status-before--other" data-build="{{ job.id }}">{{ job.status }}</span>
-                            {% endif %}
+                            {{ macros.job_status(job, true) }}
                         </td>
                         <td>{{ job.environment.key }}
                         <td>
@@ -40,15 +32,7 @@
                         <td><a href="{{ urlFor('push', {push: job.id}) }}">Push</a></td>
                         <td><a href="{{ urlFor('repository.status', {id: job.repository.id}) }}">{{ job.repository.name }}</a></td>
                         <td>
-                            {% if job.status == 'Success' %}
-                                <span class="status-before--success">{{ job.status }}</span>
-                            {% elseif job.status in ['Error', 'Removed'] %}
-                                <span class="status-before--error">{{ job.status }}</span>
-                            {% elseif job.status in ['Waiting', 'Building', 'Pushing'] %}
-                                <span class="status-before--thinking" data-push="{{ job.id }}">{{ job.status }}</span>
-                            {% else %}
-                                <span class="status-before--other" data-push="{{ job.id }}">{{ job.status }}</span>
-                            {% endif %}
+                            {{ macros.job_status(job, true) }}
                         </td>
                         {% if job.deployment %}
                             <td>{{ job.build.environment.key }} → {{ job.deployment|formatDeploymentServer(true) }}</td>
