--- a/templates/push/start.twig
+++ b/templates/push/start.twig
@@ -28,13 +28,9 @@
             <dt class="split__title">Reference</dt>
             <dd>
                 {% if githubCommitIsCurrent(build.repository.githubUser, build.repository.githubRepo, build.branch, build.commit) %}
-                    <span class="status-before--success">
-                        {{ macros.gitref(build) }}
-                    </span>
+                    {{ macros.status_icon(macros.gitref(build), 'success') }}
                 {% else %}
-                    <span class="status-before--other">
-                        {{ macros.gitref(build) }}
-                    </span>
+                    {{ macros.status_icon(macros.gitref(build), 'other') }}
                 {% endif %}
             </dd>
 
@@ -98,16 +94,12 @@
                         {% if inProgress or status.success %}
                             {% set active = inProgress ? status.latest : status.success %}
 
-                            {% if githubCommitIsCurrent(build.repository.githubUser, build.repository.githubRepo, active.build.branch, active.build.commit) %}
-                                {% set isCurrent = true %}
-                            {% else %}
-                                {% set isCurrent = false %}
-                            {% endif %}
-
                             <td>
-                                <span class="status-before--{{ isCurrent ? 'success' : 'other' }}">
-                                    {{ macros.gitref(active.build, true) }}
-                                </span>
+                                {% if githubCommitIsCurrent(build.repository.githubUser, build.repository.githubRepo, active.build.branch, active.build.commit) %}
+                                    {{ macros.status_icon(macros.gitref(active.build, true), 'success') }}
+                                {% else %}
+                                    {{ macros.status_icon(macros.gitref(active.build, true), 'other') }}
+                                {% endif %}
                             </td>
                             <td>
                                 {{ macros.gitcommit(active.build) }}
